--- a/Module 1/Week 1/Day 1/Practice/course-outline.html
+++ b/Module 1/Week 1/Day 1/Practice/course-outline.html
@@ -4,6 +4,32 @@
         <title>My Learning Path</title>
     </head>
     <body>
-        
+        <h1>My Learning Path</h1>
+        <hr>
+
+        <ul>
+            <li> Module 1: Fundamentals
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+            </li>
+
+            <li> Module 2: Frontend
+                <ul>
+                    <li>Vue.js</li>
+                    <li>TailwindCSS</li>
+                </ul>
+            </li>
+
+            <li> Module 3: Backend
+                <ul>
+                    <li>Express.js</li>
+                    <li>MongoDB</li>
+                </ul>
+            </li>
+        </ul>
+
     </body>
 </html>
