--- a/Module 1/Week 1/Day 1/Homeworks/Personal Portfolio Page.html
+++ b/Module 1/Week 1/Day 1/Homeworks/Personal Portfolio Page.html
@@ -65,7 +65,7 @@
         <h2>Contact</h2>
         <hr>
         <p>
-            Email: <a href="mailto:boupanha97@gmail.com">yboupanha97@gmail.com</a><br>
+            Email: <a href="mailto:boupanha97@gmail.com">boupanha97@gmail.com</a><br>
             <!-- Placeholder for LinkedIn profile -->
             Facebook: <a href="#">Bou Panha</a><br>
             <!-- Placeholder for GitHub profile -->
