--- a/Module 1/Week 1/Day 2/Practice/blog-post.html
+++ b/Module 1/Week 1/Day 2/Practice/blog-post.html
@@ -43,6 +43,7 @@
 
         <footer>
             <p>&copy; 2026 Bou Panha | <a href="boupanha97@gmail.com">Email Me</a></p>
+            <p>&copy; 2026 Bou Panha | <a href="mailto:boupanha97@gmail.com">Email Me</a></p>
         </footer>
     </body>
 </html>
