--- a/Module 1/Week 1/Day 2/Practice/contact-form.html
+++ b/Module 1/Week 1/Day 2/Practice/contact-form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Contac Form</title>
+        <title>Contact Form</title>
     </head>
     <body>
         <header>
@@ -14,8 +14,8 @@
                 <input type="text" name="name" id="name" required minlength="2">
                 <br><br>
 
-                <label for="phone">Tel: <span style="color: red;">*</span><label>
-                <input type="tel" name="phone" id="phone" name="phone" 
+                <label for="phone">Tel: <span style="color: red;">*</span></label>
+                <input type="tel" name="phone" id="phone" 
                     pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" 
                     placeholder="123-456-7890">
                 <br><br>
