--- a/Module 2 _ Frontend Development/Week 3 _ Vue.js Fundamentals/Day 5 _ Components Basics/Practice/project-blog.html
+++ b/Module 2 _ Frontend Development/Week 3 _ Vue.js Fundamentals/Day 5 _ Components Basics/Practice/project-blog.html
@@ -51,6 +51,8 @@
                     v-for="post in filteredPosts" 
                     :key="post.id" 
                     :post="post"
+                    @like-post="handleLikePost(post.id)"
+                    @add-comment="handleNewComment(post.id, $event)"
                 ></blog-post>
                 
                 <div v-if="filteredPosts.length === 0" class="text-center py-12 text-gray-500">
@@ -117,6 +119,23 @@
                     this.posts.unshift(post);
                     this.newPost = { title: '', content: '', image: '' };
                     this.showAddForm = false;
+                },
+                handleLikePost(postId) {
+                    const post = this.posts.find(p => p.id === postId);
+                    if (post) {
+                        post.likes++;
+                    }
+                },
+                handleNewComment(postId, commentText) {
+                    const post = this.posts.find(p => p.id === postId);
+                    if (post) {
+                        post.comments.push({
+                            id: Date.now(),
+                            user: 'You',
+                            text: commentText,
+                            avatar: 'https://api.dicebear.com/7.x/avataaars/svg?seed=You'
+                        });
+                    }
                 }
             }
         });
@@ -145,29 +164,27 @@
         // 2. Blog Post Component
         app.component('blog-post', {
             props: ['post'],
+            emits: ['like-post', 'add-comment'],
             data() {
                 return {
-                    localLikes: this.post.likes,
                     showComments: false,
                     newCommentText: ''
                 }
             },
             methods: {
+                likePost() {
+                    this.$emit('like-post');
+                },
                 addComment() {
                     if (!this.newCommentText.trim()) return;
-                    this.post.comments.push({
-                        id: Date.now(),
-                        user: 'You',
-                        text: this.newCommentText,
-                        avatar: 'https://api.dicebear.com/7.x/avataaars/svg?seed=You'
-                    });
+                    this.$emit('add-comment', this.newCommentText);
                     this.newCommentText = '';
                 }
             },
             template: `
                 <article class="bg-white rounded-xl shadow-sm overflow-hidden border border-gray-100 hover:shadow-md transition">
                     <div class="md:flex">
-                        <div class="md:w-1/3 h-48 md:h-auto relative">
+                        <div class="md:w-1/3 h-48 md:h-auto relative flex-shrink-0">
                             <img :src="post.image" :alt="post.title" class="w-full h-full object-cover absolute inset-0">
                         </div>
                         <div class="p-6 md:w-2/3 flex flex-col">
@@ -181,8 +198,8 @@
                             <p class="text-gray-600 mb-4 line-clamp-3">{{ post.content }}</p>
                             
                             <div class="mt-auto flex items-center gap-6 pt-4 border-t border-gray-50">
-                                <button @click="localLikes++" class="flex items-center gap-2 text-gray-500 hover:text-red-500 transition">
-                                    <span>❤️</span> {{ localLikes }}
+                                <button @click="likePost" class="flex items-center gap-2 text-gray-500 hover:text-red-500 transition">
+                                    <span>❤️</span> {{ post.likes }}
                                 </button>
                                 <button @click="showComments = !showComments" class="flex items-center gap-2 text-gray-500 hover:text-blue-500 transition">
                                     <span>💬</span> {{ post.comments.length }} Comments
